--- a/app/src/main/res/layout/activity_zi_jin_detail.xml
+++ b/app/src/main/res/layout/activity_zi_jin_detail.xml
@@ -24,7 +24,7 @@
             android:background="@drawable/shape"
             android:gravity="center"
             android:padding="3dp"
-            android:text="2016年-01月-17日" />
+            android:text="" />
 
         <TextView
             android:layout_width="10dp"
@@ -43,7 +43,7 @@
             android:background="@drawable/shape"
             android:gravity="center"
             android:padding="3dp"
-            android:text="2016年-01月-17日"
+            android:text=""
 
             />
 
@@ -67,7 +67,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
@@ -77,7 +77,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
@@ -87,7 +87,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
